Upload ecommerce pttkhttt

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
+
     <title>Giỏ Hàng</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -15,7 +17,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/home">Trang Chủ</a>
+                        <a class="nav-link active" aria-current="page" href="home.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Giới Thiệu</a>
@@ -69,8 +71,8 @@
             </tbody>
         </table>
 
-        <a href="/home" class="btn btn-primary mt-4">Quay lại</a>
-        <a href="/payment-shipment" class="btn btn-success">Tiến Hành Thanh Toán</a> <!-- Nút mới -->
+        <a href="\home.html" class="btn btn-primary mt-4">Quay lại</a>
+        <a href="\payment-shipment.html" class="btn btn-success">Tiến Hành Thanh Toán</a> <!-- Nút mới -->
 
     </div>
 
