--- a/src/main/resources/templates/itemDetails.html
+++ b/src/main/resources/templates/itemDetails.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
+
     <title>Chi tiết Item</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -15,7 +17,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/home">Trang Chủ</a>
+                        <a class="nav-link active" aria-current="page" href="home.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Giới Thiệu</a>
@@ -24,7 +26,7 @@
                         <a class="nav-link" href="#">Liên Hệ</a>
                     </li>
                     <li class="nav-item"></li>
-                        <a class="nav-link" href="/cart">Giỏ hàng</a>
+                        <a class="nav-link" href="cart.html">Giỏ hàng</a>
                     </li>
                 </ul>
                 <!-- Form tìm kiếm -->
