--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/home">Trang Chủ</a>
+                    <a class="nav-link active" aria-current="page" href="\home.html">Trang Chủ</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Giới Thiệu</a>
