--- a/src/main/resources/templates/paymentShipment.html
+++ b/src/main/resources/templates/paymentShipment.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
+
     <title>Chọn Phương Thức Thanh Toán và Giao Hàng</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
